Working Code Need to fix Image and expereice

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
+table,
+th,
+td {
+  border: 1px solid black;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.p {
+  margin-left: 40px;
+  font-size: small;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.heading {
+  margin-left: 40px;
+  font-size: medium;
+  font-weight: bold;
+  color: #a30909;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main {
+  margin-left: 40px;
+  font-size: x-large;
+  font-weight: bold;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.tab {
+  padding-left: 4;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.h {
+  margin-left: 40px;
+  font-size: medium;
+}
+
+.block-example {
+  width: 6rem;
+  height: 6rem;
+  margin: 0.5rem;
+  background-color: "#d40404";
+  display: inline-block;
 }
